# mars_mind

./: .firebaserc  .gitignore  README.md  firebase.json  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/mars_mind/: MainActivity.kt
api/: .gitignore  Cargo.toml  Dockerfile
api/src/: main.rs
functions/: .gitignore  main.py  requirements.txt
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: GoogleService-Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
